# demo-flit

./: README.md  pyproject.toml
.github/workflows/: python-publish.yml
src/flit_demo_package/: __init__.py
