[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "flit-demo-package"
authors = [{name = "Tim Hopper", email = "tim@example.com"}]
readme = "README.md"
license = {file = "LICENSE"}
classifiers = ["License :: OSI Approved :: MIT License"]
dynamic = ["version", "description"]
dependencies = [
    "cowsay >=6.1,<7",
]
[project.optional-dependencies]
test = [
    "pytest >=2.7.3",
]
